# verificacao_cpf

./: .gitignore  README.md  menu.py  pyproject.toml  root.py  verificador_cpf.py  verificador_cpf_test.py
